# webgen

./: .gitignore  Cargo.toml  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  REPOSITORY_INFO.md  setup-github.ps1  setup-github.sh
my-react-portfolio/: README.md  package.json
my-react-portfolio/public/: index.html
my-react-portfolio/src/: App.css  App.js
my-react-portfolio/src/components/: About.js  Contact.js  Footer.js  Header.js  Hero.js  Projects.js
src/: generator.rs  main.rs  templates.rs
src/templates/: flask.rs  mern.rs  nextjs.rs  react.rs  static_html.rs  vue.rs
sumit/: .gitignore  README.md  app.py
sumit/static/css/: style.css
sumit/static/js/: main.js
sumit/templates/: about.html  base.html  contact.html  index.html  projects.html
